# binance-algo-trading-rs

./: .env  .gitignore  Cargo.toml
resources/: binance_endpoint_docs.md
resources/binance-spot-api-docs-master/: CHANGELOG.md  CHANGELOG_CN.md  errors.md  errors_CN.md  filters.md  filters_CN.md  rest-api.md  rest-api_CN.md  user-data-stream_CN.md  web-socket-api.md  web-socket-api_CN.md
resources/binance-spot-api-docs-master/faqs/: sor_faq.md  sor_faq_cn.md  spot_glossary.md  spot_glossary_cn.md  stp_faq.md  stp_faq_cn.md  trailing-stop-faq-cn.md  trailing-stop-faq.md
resources/binance-spot-api-docs-master/sbe/schemas/: spot_1_0.xml  spot_latest.xml
resources/binance-spot-api-docs-master/testnet/: errors.md  rest-api.md  web-socket-api.md
src/: binance_api.rs  lib.rs  limit_order.rs  main.rs  position_size.rs  spot_orders.rs  stop_limit_order.rs
src/binance_api/: binance_api.rs  binance_client.rs  database_client.rs  database_config.rs  load_env.rs  logger_conf.rs  mod.rs  spot_orders.rs
src/binance_api/account/: account_info.rs  asset_balance.rs  commission_rates.rs  deserialization.rs  mod.rs  open_order.rs  order.rs  order_status.rs  postgresql.rs  trades.rs
src/binance_api/order_types/: limit_order.rs  market_order.rs  mod.rs  oco_order.rs  open_order.rs  order_type.rs  response_type.rs  side.rs  stop_limit_order.rs  time_in_force.rs
src/binance_api/streams/: binance_stream.rs  binance_websocket.rs  depth_stream.rs  kline_data.rs  mini_ticker_stream.rs  mod.rs
src/binance_client/: binance_client.rs  binance_error.rs  cancel_order_response.rs  database_client.rs  exchange_info.rs  load_env.rs  margin_client.rs  mod.rs  order_response.rs  position_size.rs  spot_orders.rs  ticker_price.rs
src/binance_client/account/: account_info.rs  asset_balance.rs  commission_rates.rs  mod.rs  open_order.rs  order.rs  order_status.rs  postgresql.rs  trades.rs
src/binance_client/order_types/: cancel_order_response.rs  limit_order.rs  market_order.rs  mod.rs  oco_order.rs  open_order.rs  side.rs  stop_limit_order.rs  time_in_force.rs
src/binance_client/streams/: all_market_mini_ticker_streams.rs  binance_stream.rs  binance_websocket.rs  book_ticker_stream.rs  depth_stream.rs  kline_data.rs  ticker_stream.rs  trade_stream.rs
tests/: check_orders.rs  test_database_config.toml
