[package]
name = "TradingScriptsRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11.3"
reqwest = "0.11.26"
serde = { version = "1.0.197", features = ["derive"] }
serde_qs = "0.12.0"
tokio = { version = "1.36.0", features = ["full"] }
async-std = "1.12.0"
hex = "0.4.3"
hmac = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"

[dev-dependencies]
mockall = "0.12.1"


[[bin]]
name = "async_experiment"
path = "src/bin/async_experiment.rs"




