[package]
name = "binance_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11.3"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_qs = "0.12.0"
tokio = { version = "1.36.0", features = ["full"] }
async-std = "1.12.0"
hex = "0.4.3"
hmac = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"

[dev-dependencies]
mockall = "0.12.1"


[[bin]]
name = "async_experiment"
path = "src/bin/async_experiment.rs"




