[package]
name = "binance_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11.3"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_qs = "0.12.0"
async-std = "1.12.0"
hex = "0.4.3"
hmac = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
chrono = "0.4.35"
async-tungstenite = "0.25.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-websockets = { version = "0.7.0", features = ["native-tls", "client", "server", "http-integration", "openssl", "fastrand"] }
tokio-util = "0.7.10"
url = "2.2.2"
futures-util = "0.3.30"
futures = "0.3.30"
regex = "1.10.3"
bytes = "1.5.0"
rust_decimal = "1.0"
toml = "0.8.11"
dotenv = "0.15.0"
tokio-tungstenite = "0.21.0"
serde_with = "3.7.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
mockall = "0.12.1"


[[bin]]
name = "async_experiment"
path = "src/bin/async_experiment.rs"

[[bin]]
name = "quick_trade"
path = "src/bin/quick_trade.rs"




